# My_SUper_Graph

./: .gitignore  README.md  langgraph.json  pyproject.toml  sample2.py  sample_deepagent.py  sample_pdf_read.py  sample_pdf_reader.ipynb  superflow_plan.md
.cursor/plans/: multimodal_image_support_56ff3a02.plan.md  pdf_processing_pipeline_c2b5ad0a.plan.md
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ChatWindow.tsx  InputArea.tsx  MessageBubble.tsx  Sidebar.tsx  TimelinePanel.tsx
frontend/src/hooks/: useChat.ts
frontend/src/lib/: api.ts
prompts/: games_node.yaml  gate_node.yaml  movies_node.yaml  test_agent_config.yaml
scripts/: dev.sh  setup_db.sh
src/: test.py
src/api/: __init__.py  database.py  main.py
src/api/routes/: chat.py  files.py  threads.py
src/graphs/: graph.py
src/langgraphprac.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/nodes/: ConvoNode.py  DomainIdentifierNode.py  GamesNode.py  GateNode.py  MoviesNode.py
src/schemas/: ConvoAgentSchema.py  DomainIdentiferAgentSchema.py  GateAgentSchema.py
src/state/: state.py
src/utils/: __init__.py  image_utils.py  message_logger.py  pdf_processor.py  pptx_processor.py  read_yaml.py  s3_operations.py
